--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JanSehat - Quality Healthcare from Home</title>
+    
+    <!-- Preload critical images for better mobile performance -->
+    <link rel="preload" as="image" href="/images/vcDoctor.jpg" />
+    <link rel="preload" as="image" href="/health-records.jpg" />
+    <link rel="preload" as="image" href="/generated-image (3).png" />
+    <link rel="preload" as="image" href="/gps-map-navigator-concept-street-maps-directions-vector-illustration_230920-2779.jpg" />
   </head>
   <body>
     <div id="root"></div>
