--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/jansehat-favicon.svg" />
+    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JanSehat - Quality Healthcare from Home</title>
     
     <!-- Preload critical images for better mobile performance -->
-    <link rel="preload" as="image" href="/jansehat-logo.svg" />
-    <link rel="preload" as="image" href="/jansehat-favicon.svg" />
+    <link rel="preload" as="image" href="/logo.jpg" />
     <link rel="preload" as="image" href="/images/vcDoctor.jpg" />
     <link rel="preload" as="image" href="/health-records.jpg" />
     <link rel="preload" as="image" href="/generated-image (3).png" />
