--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JanSehat - Quality Healthcare from Home</title>
     
     <!-- Preload critical images for better mobile performance -->
-    <link rel="preload" as="image" href="/public/logo.jpg" />
+    <link rel="preload" as="image" href="/logo.jpg" />
     <link rel="preload" as="image" href="/images/vcDoctor.jpg" />
     <link rel="preload" as="image" href="/health-records.jpg" />
     <link rel="preload" as="image" href="/generated-image (3).png" />
